# opencv

./: LICENSE  README.md  Sobel.cpp
InvertRGB/: CMakeLists.txt  InvertRGB.cpp
LaplaceFilter/: CMakeLists.txt  Laplace.cpp
lowpass/: CMakeLists.txt  Lowpass.cpp
sobel/: CMakeLists.txt
